; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/marvell/mwifiex/extr_wmm.c_mwifiex_wmm_convert_tos_to_ac.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/marvell/mwifiex/extr_wmm.c_mwifiex_wmm_convert_tos_to_ac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mwifiex_adapter = type { i32 }

@mwifiex_wmm_convert_tos_to_ac.tos_to_ac = internal constant [8 x i32] [i32 131, i32 130, i32 130, i32 131, i32 129, i32 129, i32 128, i32 128], align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mwifiex_adapter*, i64)* @mwifiex_wmm_convert_tos_to_ac to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mwifiex_wmm_convert_tos_to_ac(%struct.mwifiex_adapter* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mwifiex_adapter*, align 8
  %5 = alloca i64, align 8
  store %struct.mwifiex_adapter* %0, %struct.mwifiex_adapter** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = call i64 @ARRAY_SIZE(i32* getelementptr inbounds ([8 x i32], [8 x i32]* @mwifiex_wmm_convert_tos_to_ac.tos_to_ac, i64 0, i64 0))
  %8 = icmp uge i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 131, i32* %3, align 4
  br label %14

10:                                               ; preds = %2
  %11 = load i64, i64* %5, align 8
  %12 = getelementptr inbounds [8 x i32], [8 x i32]* @mwifiex_wmm_convert_tos_to_ac.tos_to_ac, i64 0, i64 %11
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %3, align 4
  br label %14

14:                                               ; preds = %10, %9
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i64 @ARRAY_SIZE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
